tests/snapshots/cli_integration__list_fixture.snap
---
source: tests/cli_integration.rs
expression: out
---
status: exit status: 0
--- stdout ---
zk-mutant: list
project: "tests/fixtures/simple_noir"
discovered 4 mutants
listed 4 mutants
--- mutants (discovered) ---
#1 src/main.nr:4:14-4:15 Condition/lt_to_ge: "<" -> ">="
#2 src/main.nr:6:14-6:16 Condition/neq_to_eq: "!=" -> "=="
#3 src/utils.nr:4:18-4:20 Condition/eq_to_neq: "==" -> "!="
#4 src/utils.nr:10:14-10:16 Condition/eq_to_neq: "==" -> "!="
--- stderr ---
