tests/snapshots/cli_integration__list_fixture_json.snap
---
source: tests/cli_integration.rs
expression: out
---
{
  "tool": "zk-mutant",
  "version": "0.2.0-alpha.1",
  "project_root": "tests/fixtures/simple_noir",
  "discovered": 4,
  "listed": 4,
  "mutants": [
    {
      "id": 1,
      "operator": {
        "category": "Condition",
        "name": "lt_to_ge"
      },
      "span": {
        "file": "src/main.nr",
        "start": 55,
        "end": 56
      },
      "original_snippet": "<",
      "mutated_snippet": ">=",
      "outcome": "NotRun",
      "duration_ms": null
    },
    {
      "id": 2,
      "operator": {
        "category": "Condition",
        "name": "neq_to_eq"
      },
      "span": {
        "file": "src/main.nr",
        "start": 467,
        "end": 469
      },
      "original_snippet": "!=",
      "mutated_snippet": "==",
      "outcome": "NotRun",
      "duration_ms": null
    },
    {
      "id": 3,
      "operator": {
        "category": "Condition",
        "name": "eq_to_neq"
      },
      "span": {
        "file": "src/utils.nr",
        "start": 113,
        "end": 115
      },
      "original_snippet": "==",
      "mutated_snippet": "!=",
      "outcome": "NotRun",
      "duration_ms": null
    },
    {
      "id": 4,
      "operator": {
        "category": "Condition",
        "name": "eq_to_neq"
      },
      "span": {
        "file": "src/utils.nr",
        "start": 298,
        "end": 300
      },
      "original_snippet": "==",
      "mutated_snippet": "!=",
      "outcome": "NotRun",
      "duration_ms": null
    }
  ]
}
