tests/snapshots/cli_integration__run_baseline_fail_json.snap
---
source: tests/cli_integration.rs
expression: out
---
status: exit status: 1
--- stdout ---
{
  "tool": "zk-mutant",
  "version": "0.1.0",
  "project_root": "tests/fixtures/simple_noir",
  "discovered": 0,
  "executed": 0,
  "baseline": {
    "success": false,
    "exit_code": 1,
    "duration_ms": 0
  },
  "summary": {
    "killed": 0,
    "survived": 0,
    "invalid": 0
  },
  "mutants": [],
  "error": "baseline `nargo test` failed"
}
--- stderr ---
