tests/snapshots/cli_integration__run_fail_on_survivors_json.snap
---
source: tests/cli_integration.rs
expression: out
---
{
  "tool": "zk-mutant",
  "version": "0.2.0-alpha.1",
  "project_root": "tests/fixtures/simple_noir",
  "discovered": 4,
  "executed": 1,
  "baseline": {
    "success": true,
    "exit_code": 0,
    "duration_ms": 0
  },
  "summary": {
    "killed": 0,
    "survived": 1,
    "invalid": 0
  },
  "mutants": [
    {
      "id": 1,
      "operator": {
        "category": "Condition",
        "name": "lt_to_ge"
      },
      "span": {
        "file": "src/main.nr",
        "start": 55,
        "end": 56
      },
      "original_snippet": "<",
      "mutated_snippet": ">=",
      "outcome": "Survived",
      "duration_ms": 0
    }
  ]
}
