tests/snapshots/cli_integration__run_limit_0_json.snap
---
source: tests/cli_integration.rs
expression: out
---
{
  "tool": "zk-mutant",
  "version": "0.1.0",
  "project_root": "tests/fixtures/simple_noir",
  "discovered": 4,
  "executed": 0,
  "baseline": {
    "success": true,
    "exit_code": 0,
    "duration_ms": 0
  },
  "summary": {
    "killed": 0,
    "survived": 0,
    "invalid": 0
  },
  "mutants": []
}
